[project]
name = "render-python-req-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "altair==4.2.0",
    "altex==0.2.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "anywidget==0.9.18",
    "appdirs==1.4.4",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "arabic-reshaper==3.0.0",
    "arrow==1.3.0",
    "asn1crypto==1.5.1",
    "astor==0.8.1",
    "asttokens==2.4.1",
    "asyncio==3.4.3",
    "attrs==25.3.0",
    "authlib==1.5.2",
    "azure-ai-formrecognizer==3.3.3",
    "azure-common==1.1.28",
    "azure-core==1.35.1",
    "azure-storage-blob==12.26.0",
    "backoff==2.2.1",
    "base58==2.1.1",
    "beautifulsoup4==4.13.5",
    "blinker==1.5",
    "boto3==1.40.38",
    "botocore==1.40.38",
    "cachetools==5.2.0",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "chardet==5.1.0",
    "charset-normalizer==2.1.1",
    "click==8.1.3",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "contourpy==1.0.7",
    "cryptography==39.0.2",
    "cssselect==1.3.0",
    "cssselect2==0.8.0",
    "cssutils==2.11.1",
    "cycler==0.11.0",
    "dataclasses-json==0.6.7",
    "dateutils==0.6.12",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distlib==0.3.6",
    "distro==1.9.0",
    "dnspython==2.3.0",
    "duckdb==1.4.0",
    "entrypoints==0.4",
    "enverus-developer-api==3.2.2",
    "et-xmlfile==2.0.0",
    "executing==2.1.0",
    "faker==37.8.0",
    "fastjsonschema==2.21.1",
    "favicon==0.7.0",
    "filelock==3.9.0",
    "flask==2.2.2",
    "fonttools==4.38.0",
    "fpdf2==2.7.4",
    "frozenlist==1.7.0",
    "fuzzywuzzy==0.18.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "gitdb==4.0.10",
    "gitpython==3.1.29",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.21.0",
    "googleapis-common-protos==1.70.0",
    "graphviz==0.20.3",
    "greenlet==3.2.4 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "grpcio==1.75.0",
    "grpcio-status==1.75.0",
    "gw-dsl-parser==0.1.49.1",
    "h11==0.16.0",
    "htbuilder==0.9.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.27.2",
    "httpx-sse==0.4.1",
    "idna==3.4",
    "importlib-metadata==5.1.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipylab==1.0.0",
    "ipython==8.27.0",
    "ipywidgets==8.1.7",
    "isodate==0.6.1",
    "itsdangerous==2.1.2",
    "jedi==0.19.1",
    "jinja2==3.1.2",
    "jiter==0.11.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.15",
    "kaleido==0.2.1",
    "kanaries-track==0.0.5",
    "kiwisolver==1.4.4",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-core==0.3.76",
    "langchain-experimental==0.3.2",
    "langchain-openai==0.3.15",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.3.45",
    "lasio==0.30",
    "levenshtein==0.23.0",
    "lxml==5.3.2",
    "markdown==3.9",
    "markdownlit==0.0.7",
    "markupsafe==2.1.1",
    "marshmallow==3.26.1",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "missingno==0.4.2",
    "monotonic==1.6",
    "more-itertools==10.8.0",
    "msrest==0.7.1",
    "multidict==6.6.4",
    "mypy-extensions==1.1.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==1.26.2",
    "oauthlib==3.3.1",
    "ollama==0.3.3",
    "openai==1.109.1",
    "opencv-python==4.9.0.80",
    "openpyxl==3.1.5",
    "ordered-set==4.1.0",
    "orjson==3.9.14",
    "oscrypto==1.3.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pandasai==0.1.0",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pdf2image==1.17.0",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==9.3.0",
    "pip==24.0",
    "platformdirs==2.6.2",
    "plotly==5.24.1",
    "premailer==3.10.0",
    "prettytable==3.16.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.47",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==6.0.0",
    "psygnal==0.14.2",
    "ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "pyarrow==10.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.21",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pydeck==0.8.0",
    "pyecharts==2.0.8",
    "pygments==2.13.0",
    "pygwalker==0.4.9.15",
    "pyhanko==0.18.0",
    "pyhanko-certvalidator==0.22.0",
    "pyjwt==2.10.1",
    "pylatex==1.3.2",
    "pymdown-extensions==10.16.1",
    "pymongo==4.3.3",
    "pympler==1.0.1",
    "pymupdf==1.26.4",
    "pyodbc==5.1.0",
    "pyopenssl==23.2.0",
    "pyparsing==3.0.9",
    "pypdf==6.1.0",
    "pyrsistent==0.19.2",
    "pytesseract==0.3.10",
    "python-bidi==0.6.6",
    "python-calamine==0.2.3",
    "python-csv==0.0.10",
    "python-dateutil==2.8.2",
    "python-decouple==3.7",
    "python-dotenv==1.1.1",
    "python-levenshtein==0.23.0",
    "python-pptx==0.6.21",
    "pytz==2022.6",
    "pytz-deprecation-shim==0.1.0.post0",
    "pywin32==311 ; platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qrcode==8.2",
    "quickjs==1.19.4",
    "rapidfuzz==3.6.1",
    "referencing==0.36.2",
    "regex==2025.9.18",
    "replicate==1.0.4",
    "reportlab==4.4.4",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "retrying==1.3.4",
    "rich==12.6.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "s3transfer==0.14.0",
    "scipy==1.12.0",
    "seaborn==0.12.1",
    "segment-analytics-python==2.2.3",
    "semver==2.13.0",
    "setuptools==65.5.0",
    "simplejson==3.20.1",
    "six==1.16.0",
    "smmap==5.0.0",
    "sniffio==1.3.1",
    "snowflake-connector-python==3.17.4",
    "snowflake-snowpark-python==1.39.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sqlalchemy==2.0.43",
    "sqlglot==27.18.0",
    "st-annotated-text==4.0.2",
    "st-theme==1.2.3",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "streamlit==1.49.1",
    "streamlit-aggrid==1.1.6",
    "streamlit-analytics==0.4.1",
    "streamlit-avatar==0.1.3",
    "streamlit-browser-session-storage==0.0.12",
    "streamlit-camera-input-live==0.2.0",
    "streamlit-card==1.0.2",
    "streamlit-comments==0.0.7",
    "streamlit-datalist==0.0.5",
    "streamlit-echarts==0.4.0",
    "streamlit-embedcode==0.1.2",
    "streamlit-extras==0.7.1",
    "streamlit-faker==0.0.4",
    "streamlit-image-coordinates==0.4.0",
    "streamlit-javascript==0.1.5",
    "streamlit-js-eval==0.1.7",
    "streamlit-keyup==0.3.0",
    "streamlit-local-storage==0.0.25",
    "streamlit-plotly-events==0.0.6",
    "streamlit-screen-stats==0.0.82",
    "streamlit-toggle-switch==1.0.2",
    "streamlit-vertical-slider==2.5.5",
    "svglib==1.5.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "textdistance==4.6.1",
    "tiktoken==0.11.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "toolz==0.12.0",
    "tornado==6.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2022.7",
    "tzlocal==4.2",
    "unicodecsv==0.14.1",
    "uritools==5.0.0",
    "urllib3==2.5.0",
    "uv==0.8.22",
    "validators==0.35.0",
    "virtualenv==20.17.1",
    "wasmtime==36.0.0",
    "watchdog==2.2.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "werkzeug==2.2.2",
    "wesanderson==0.0.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "xhtml2pdf==0.2.9",
    "xkcdpass==1.20.0",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.5",
    "yagmail==0.15.293",
    "yarl==1.20.1",
    "zipp==3.11.0",
    "zstandard==0.23.0",
]
